# pbarlike

./: .readthedocs.yaml  LICENSE  README.md  pbarlike-gambit-interface.py  pyproject.toml  tests.py
docs/source/: conf.py  convenience_functions.rst  data.rst  dependencies.rst  drn_interface.rst  index.rst  likelihoods.rst  propagation.rst  requirements.txt  solar_modulation.rst
pbarlike/: __init__.py  banner.py  convenience_functions.py  data.py  drn_interface.py  likelihoods.py  propagation.py  solar_modulation.py
pbarlike/dependencies/: CovMatrix_AMS02_pbar_7y.txt
pbarlike/dependencies/DIFF.BRK/: CovMatrix_AMS02_pbar_CrossSection.txt
pbarlike/dependencies/INJ.BRK/: CovMatrix_AMS02_pbar_CrossSection.txt
